--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-art-gallery",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "",
     "repository": {
         "type": "git",
@@ -10,7 +10,8 @@
     "types": "dist/index.d.ts",
     "scripts": {
         "test": "echo DODO",
-        "build": "tsc",
+        "build": "tsc && yarn copyfiles",
+        "copyfiles": "copyfiles -u 1 src/**/*.svg src/**/*.css dist/",
         "lint:check": "eslint . --ext .ts,.tsx",
         "lint": "npm run lint:check -- --fix",
         "_format": "prettier '**/*.{ts,tsx,json,md}'",
@@ -41,8 +42,18 @@
     ],
     "keywords": [],
     "homepage": "https://github.com/thieryw/react-art-gallery",
+    "dependencies": {
+        "@emotion/react": "^11.4.1",
+        "powerhooks": "^0.11.0",
+        "tss-react": "^2.0.1",
+        "react-svg": "^14.0.13",
+        "tsafe": "^0.8.1",
+        "react-spinners": "^0.11.0"
+    },
     "devDependencies": {
         "@types/node": "^16.4.9",
+        "@types/react": "^17.0.4",
+        "@types/react-dom": "^17.0.0",
         "typescript": "^4.3.5",
         "@typescript-eslint/eslint-plugin": "^4.28.5",
         "@typescript-eslint/parser": "^4.28.5",
@@ -50,6 +61,15 @@
         "eslint-config-prettier": "^8.3.0",
         "husky": "^4.3.8",
         "lint-staged": "^11.1.1",
-        "prettier": "^2.3.2"
+        "prettier": "^2.3.2",
+        "copyfiles": "^2.4.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-scripts": "^4.0.3",
+        "ts-node": "^10.2.1"
+    },
+    "peerDependencies": {
+        "react": "^16.8.0 || ^17.0.0",
+        "@types/react": "^16.8.0 || ^17.0.0"
     }
 }
