--- a/package.json
+++ b/package.json
@@ -48,12 +48,14 @@
         "tss-react": "^2.0.1",
         "react-svg": "^14.0.13",
         "tsafe": "^0.8.1",
-        "react-spinners": "^0.11.0"
+        "react-spinners": "^0.11.0",
+        "sharp": "^0.29.2"
     },
     "devDependencies": {
         "@types/node": "^16.4.9",
         "@types/react": "^17.0.4",
         "@types/react-dom": "^17.0.0",
+        "@types/sharp": "^0.29.2",
         "typescript": "^4.3.5",
         "@typescript-eslint/eslint-plugin": "^4.28.5",
         "@typescript-eslint/parser": "^4.28.5",
