--- a/package.json
+++ b/package.json
@@ -43,20 +43,19 @@
     "keywords": [],
     "homepage": "https://github.com/thieryw/react-art-gallery",
     "dependencies": {
-        "@emotion/react": "^11.4.1",
-        "powerhooks": "^0.11.0",
-        "tss-react": "^2.0.1",
-        "react-svg": "^14.0.13",
-        "tsafe": "^0.8.1",
-        "react-spinners": "^0.11.0",
-        "sharp": "^0.29.2"
+        "@emotion/react": "^11.9.3",
+        "powerhooks": "^0.20.4",
+        "tss-react": "^3.7.1",
+        "react-svg": "^15.1.3",
+        "tsafe": "^0.10.0",
+        "react-spinners": "^0.13.3"
     },
     "devDependencies": {
-        "@types/node": "^16.4.9",
-        "@types/react": "^17.0.4",
-        "@types/react-dom": "^17.0.0",
-        "@types/sharp": "^0.29.2",
-        "typescript": "^4.3.5",
+        "@types/node": "^18.0.6",
+        "@types/react": "^18.0.15",
+        "@types/react-dom": "^18.0.6",
+        "@types/sharp": "^0.30.4",
+        "typescript": "^4.7.4",
         "@typescript-eslint/eslint-plugin": "^4.28.5",
         "@typescript-eslint/parser": "^4.28.5",
         "eslint": "^7.32.0",
@@ -65,13 +64,13 @@
         "lint-staged": "^11.1.1",
         "prettier": "^2.3.2",
         "copyfiles": "^2.4.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-scripts": "^4.0.3",
-        "ts-node": "^10.2.1"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-scripts": "^5.0.1",
+        "ts-node": "^10.9.1"
     },
     "peerDependencies": {
-        "react": "^16.8.0 || ^17.0.0",
-        "@types/react": "^16.8.0 || ^17.0.0"
+        "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+        "@types/react": "^16.8.0 || ^17.0.0 || ^18.0.0"
     }
 }
