--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,8 +29,8 @@ jobs:
     needs: test_lint
     strategy:
       matrix:
-        node: [ '15', '14' ]
-        os: [ windows-latest, ubuntu-latest ]
+        node: [ '16' ]
+        os: [ ubuntu-latest ]
     name: Test with Node v${{ matrix.node }} on ${{ matrix.os }}
     steps:
     - name: Tell if project is using npm or yarn
@@ -118,7 +118,7 @@ jobs:
         ref: ${{ github.ref }}
     - uses: actions/setup-node@v2.1.3
       with:
-        node-version: '15'
+        node-version: '16'
         registry-url: https://registry.npmjs.org/
     - uses: bahmutov/npm-install@v1
     - run: |
