--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
         "noFallthroughCasesInSwitch": true
     },
     "include": ["src"],
-    "exclude": ["src/test/test-vanilla"]
+    "exclude": ["src/test/vanilla"]
 }
